# GradientRain

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Droplet.h  GradientRain.cpp  GradientRain.h  Makefile  PurpleRain.cpp  README.md  Rain.cpp  Rain.h  app.cpp  cmake_install.cmake  utils.cpp  utils.h
src/: App.h  GameOfLife.cpp  GameOfLife.h  GradientRain.cpp  GradientRain.h  Poly.cpp  Poly.h  app.cpp  main.cpp  utils.cpp
src/pge/: olcPGEX_TransformedView.h  olcPixelGameEngine.cpp
src/utils/: utils.cpp  utils.h
